--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+.text-2xl {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: capitalize;
+}
